load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "constants",
    hdrs = ["constants.h"],
)

cc_library(
    name = "id",
    srcs = ["id.cpp"],
    hdrs = ["id.h"],
)

cc_library(
    name = "logging",
    srcs = ["logging.cpp"],
    hdrs = ["logging.h"],
)

cc_library(
    name = "random",
    srcs = ["random.cpp"],
    hdrs = ["random.h"],
)

cc_library(
    name = "status",
    hdrs = ["status.h"],
    deps = [":logging"],
)

cc_library(
    name = "task_runner",
    srcs = ["task_runner.cpp"],
    hdrs = ["task_runner.h"],
    deps = [":logging"],
)

cc_test(
    name = "id_test",
    srcs = ["id_test.cpp"],
    deps = [
        ":id",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "random_test",
    srcs = ["random_test.cpp"],
    deps = [
        ":random",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "task_runner_test",
    srcs = ["task_runner_test.cpp"],
    deps = [
        ":task_runner",
        "@googletest//:gtest_main",
    ],
)
