load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_utils",
    hdrs = ["common_utils.h"],
)

cc_library(
    name = "id",
    hdrs = ["id.h"],
)

cc_library(
    name = "id_generator",
    srcs = ["id_generator.cpp"],
    hdrs = ["id_generator.h"],
    deps = [
        ":id",
    ],
)

cc_library(
    name = "logging",
    srcs = ["logging.cpp"],
    hdrs = ["logging.h"],
)

cc_library(
    name = "random",
    srcs = ["random.cpp"],
    hdrs = ["random.h"],
)

cc_library(
    name = "status",
    hdrs = ["status.h"],
    deps = [
        ":logging",
    ],
)

cc_test(
    name = "common_utils_test",
    srcs = ["common_utils_test.cpp"],
    deps = [
        ":common_utils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "id_generator_test",
    srcs = ["id_generator_test.cpp"],
    deps = [
        ":id_generator",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "random_test",
    srcs = ["random_test.cpp"],
    deps = [
        ":random",
        "@googletest//:gtest_main",
    ],
)
