load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "find_or_null",
    hdrs = ["find_or_null.h"],
)

cc_library(
    name = "random",
    srcs = ["random.cpp"],
    hdrs = ["random.h"],
)

cc_library(
    name = "visitor",
    hdrs = ["visitor.h"],
)

cc_test(
    name = "find_or_null_test",
    srcs = ["find_or_null_test.cpp"],
    deps = [
        ":find_or_null",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "random_test",
    srcs = ["random_test.cpp"],
    deps = [
        ":random",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "visitor_test",
    srcs = ["visitor_test.cpp"],
    deps = [
        ":visitor",
        "@googletest//:gtest_main",
    ],
)
