load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "arpeggiator",
    srcs = ["arpeggiator.cpp"],
    hdrs = ["arpeggiator.h"],
    deps = [
        "//barelymusician",
        "//barelymusician/common:random",
        "//barelymusician/common:rational",
    ],
)

cc_library(
    name = "metronome",
    srcs = ["metronome.cpp"],
    hdrs = ["metronome.h"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "repeater",
    srcs = ["repeater.cpp"],
    hdrs = ["repeater.h"],
    deps = [
        "//barelymusician",
        "//barelymusician/common:random",
        "//barelymusician/common:rational",
    ],
)
