add_library(
  barelymusician_arpeggiator
  arpeggiator.cpp
  arpeggiator.h
)
target_link_libraries(
  barelymusician_arpeggiator
  barelymusician
  barelymusician_random
)

add_library(
  barelymusician_repeater
  repeater.cpp
  repeater.h
)
target_link_libraries(
  barelymusician_repeater
  barelymusician
  barelymusician_random
)
