add_library(
  barelymusician_components_arpeggiator
  arpeggiator.cpp
  arpeggiator.h
)
target_link_libraries(
  barelymusician_components_arpeggiator
  barelymusician
  barelymusician_common_random
)

add_library(
  barelymusician_components_repeater
  repeater.cpp
  repeater.h
)
target_link_libraries(
  barelymusician_components_repeater
  barelymusician
  barelymusician_common_random
)
