load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "duration",
    srcs = ["duration.cpp"],
    hdrs = ["duration.h"],
)

cc_library(
    name = "intensity",
    srcs = ["intensity.cpp"],
    hdrs = ["intensity.h"],
)

cc_library(
    name = "pitch",
    srcs = ["pitch.cpp"],
    hdrs = ["pitch.h"],
)

cc_test(
    name = "duration_test",
    srcs = ["duration_test.cpp"],
    deps = [
        ":duration",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "intensity_test",
    srcs = ["intensity_test.cpp"],
    deps = [
        ":intensity",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pitch_test",
    srcs = ["pitch_test.cpp"],
    deps = [
        ":pitch",
        "@googletest//:gtest_main",
    ],
)
