load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "intensity",
    srcs = ["intensity.cpp"],
    hdrs = ["intensity.h"],
    deps = [
        "//barelymusician:barelymusician_headeronly",
    ],
)

cc_library(
    name = "pitch",
    srcs = ["pitch.cpp"],
    hdrs = ["pitch.h"],
    deps = [
        "//barelymusician:barelymusician_headeronly",
    ],
)

cc_test(
    name = "intensity_test",
    srcs = ["intensity_test.cpp"],
    deps = [
        ":intensity",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pitch_test",
    srcs = ["pitch_test.cpp"],
    deps = [
        ":pitch",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)
