add_library(
  barelymusician_duration
  duration.cpp
  duration.h
)

add_library(
  barelymusician_midi
  midi.cpp
  midi.h
)
target_link_libraries(
  barelymusician_midi
  barelymusician_scale
)

add_library(
  barelymusician_scale
  scale.cpp
  scale.h
)
target_link_libraries(
  barelymusician_scale
  barelymusician
)

if(ENABLE_TESTS)
  add_executable(
    barelymusician_duration_test
    duration_test.cpp
  )
  target_link_libraries(
    barelymusician_duration_test
    barelymusician_duration
    gtest_main
  )
  gtest_discover_tests(barelymusician_duration_test)

  add_executable(
    barelymusician_midi_test
    midi_test.cpp
  )
  target_link_libraries(
    barelymusician_midi_test
    barelymusician_midi
    barelymusician_scale
    gtest_main
  )
  gtest_discover_tests(barelymusician_midi_test)

  add_executable(
    barelymusician_scale_test
    scale_test.cpp
  )
  target_link_libraries(
    barelymusician_scale_test
    barelymusician_scale
    gtest_main
  )
  gtest_discover_tests(barelymusician_scale_test)
endif()
