load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "transport",
    srcs = ["transport.cpp"],
    hdrs = ["transport.h"],
    deps = [
        "//barelymusician:include",
    ],
)

cc_test(
    name = "transport_test",
    srcs = ["transport_test.cpp"],
    deps = [
        ":transport",
        "@googletest//:gtest_main",
    ],
)
