load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dsp_utils",
    srcs = ["dsp_utils.cpp"],
    hdrs = ["dsp_utils.h"],
    deps = [
        # TODO(#109): replace by `//barelymusician`.
        "//barelymusician:include",
    ],
)

cc_library(
    name = "envelope",
    srcs = ["envelope.cpp"],
    hdrs = ["envelope.h"],
    deps = [
        ":generator",
        "//barelymusician",
    ],
)

cc_library(
    name = "filter",
    hdrs = ["filter.h"],
)

cc_library(
    name = "gain_processor",
    srcs = ["gain_processor.cpp"],
    hdrs = ["gain_processor.h"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "generator",
    hdrs = ["generator.h"],
)

cc_library(
    name = "one_pole_filter",
    srcs = ["one_pole_filter.cpp"],
    hdrs = ["one_pole_filter.h"],
    deps = [
        ":filter",
    ],
)

cc_library(
    name = "oscillator",
    srcs = ["oscillator.cpp"],
    hdrs = ["oscillator.h"],
    deps = [
        ":dsp_utils",
        ":generator",
        "//barelymusician",
        "//barelymusician/common:random",
    ],
)

cc_library(
    name = "polyphonic_voice",
    hdrs = ["polyphonic_voice.h"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "sample_player",
    srcs = ["sample_player.cpp"],
    hdrs = ["sample_player.h"],
    deps = [
        ":generator",
        "//barelymusician",
    ],
)

cc_library(
    name = "voice",
    hdrs = ["voice.h"],
    deps = [
        "//barelymusician",
    ],
)

cc_test(
    name = "dsp_utils_test",
    srcs = ["dsp_utils_test.cpp"],
    deps = [
        ":dsp_utils",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "envelope_test",
    srcs = ["envelope_test.cpp"],
    deps = [
        ":envelope",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "gain_processor_test",
    srcs = ["gain_processor_test.cpp"],
    deps = [
        ":gain_processor",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "one_pole_filter_test",
    srcs = ["one_pole_filter_test.cpp"],
    deps = [
        ":one_pole_filter",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "polyphonic_voice_test",
    srcs = ["polyphonic_voice_test.cpp"],
    deps = [
        ":polyphonic_voice",
        ":voice",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sample_player_test",
    srcs = ["sample_player_test.cpp"],
    deps = [
        ":sample_player",
        "//barelymusician",
        "@googletest//:gtest_main",
    ],
)
