load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "custom_effect",
    hdrs = ["custom_effect.h"],
    visibility = ["//visibility:private"],
    deps = [
        "//barelymusician",
    ],
)

cc_library(
    name = "high_pass_effect",
    srcs = ["high_pass_effect.cpp"],
    hdrs = ["high_pass_effect.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_effect",
        "//barelymusician",
        "//barelymusician/dsp:dsp_utils",
        "//barelymusician/dsp:one_pole_filter",
    ],
    alwayslink = True,
)

cc_library(
    name = "lfo_effect",
    srcs = ["lfo_effect.cpp"],
    hdrs = ["lfo_effect.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_effect",
        "//barelymusician",
        "//barelymusician/dsp:oscillator",
    ],
    alwayslink = True,
)

cc_library(
    name = "low_pass_effect",
    srcs = ["low_pass_effect.cpp"],
    hdrs = ["low_pass_effect.h"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":custom_effect",
        "//barelymusician",
        "//barelymusician/dsp:dsp_utils",
        "//barelymusician/dsp:one_pole_filter",
    ],
    alwayslink = True,
)
