load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//barelymusician:__subpackages__"])

cc_library(
    name = "engine",
    srcs = ["engine.cpp"],
    hdrs = ["engine.h"],
    deps = [
        ":id",
        ":instrument",
        ":mutable_data",
        # TODO(#109): Reenable after API cleanup.
        # ":performer",
        "//barelymusician/common:find_or_null",
    ],
)

cc_library(
    name = "event",
    srcs = ["event.cpp"],
    hdrs = ["event.h"],
    deps = [
        "//barelymusician:include",
    ],
)

cc_library(
    name = "id",
    hdrs = ["id.h"],
    deps = [
        "//barelymusician:include",
    ],
)

cc_library(
    name = "instrument",
    srcs = ["instrument.cpp"],
    hdrs = ["instrument.h"],
    deps = [
        ":message",
        ":message_queue",
        ":parameter",
        "//barelymusician:include",
    ],
)

cc_library(
    name = "message",
    hdrs = ["message.h"],
)

cc_library(
    name = "message_queue",
    srcs = ["message_queue.cpp"],
    hdrs = ["message_queue.h"],
    deps = [
        ":message",
    ],
)

cc_library(
    name = "mutable_data",
    hdrs = ["mutable_data.h"],
)

cc_library(
    name = "parameter",
    srcs = ["parameter.cpp"],
    hdrs = ["parameter.h"],
    deps = [
        "//barelymusician:include",
    ],
)

# TODO(#109): Reenable after API cleanup.
# cc_library(
#     name = "performer",
#     srcs = ["performer.cpp"],
#     hdrs = ["performer.h"],
#     deps = [
#         ":id",
#         "//barelymusician:include",
#         "//barelymusician/common:find_or_null",
#     ],
# )

# TODO(#109): Reenable after API cleanup.
# cc_test(
#     name = "engine_test",
#     srcs = ["engine_test.cpp"],
#     deps = [
#         ":engine",
#         ":id",
#         ":instrument",
#         ":parameter",
#         "@googletest//:gtest_main",
#     ],
# )

cc_test(
    name = "instrument_test",
    srcs = ["instrument_test.cpp"],
    deps = [
        ":instrument",
        ":parameter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "message_queue_test",
    srcs = ["message_queue_test.cpp"],
    deps = [
        ":message",
        ":message_queue",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mutable_data_test",
    srcs = ["mutable_data_test.cpp"],
    deps = [
        ":mutable_data",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "parameter_test",
    srcs = ["parameter_test.cpp"],
    deps = [
        ":parameter",
        "@googletest//:gtest_main",
    ],
)

# TODO(#109): Reenable after API cleanup.
# cc_test(
#     name = "performer_test",
#     srcs = ["performer_test.cpp"],
#     deps = [
#         ":performer",
#         "@googletest//:gtest_main",
#     ],
# )
